@@ -3,9 +3,7 @@ package it.pagopa.pn.delivery.middleware.notificationdao;
 import it.pagopa.pn.commons.abstractions.IdConflictException;
 import it.pagopa.pn.commons.abstractions.impl.MiddlewareTypes;
 import it.pagopa.pn.delivery.generated.openapi.server.v1.dto.FullSentNotification;
-import it.pagopa.pn.delivery.generated.openapi.server.v1.dto.NewNotificationRequest;
 import it.pagopa.pn.delivery.middleware.notificationdao.entities.*;
-import it.pagopa.pn.delivery.models.NotificationCost;
 import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -16,9 +14,7 @@ import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import software.amazon.awssdk.enhanced.dynamodb.Key;
 
-import java.time.Instant;
 import java.util.Collections;
-import java.util.List;
 import java.util.Optional;
 
 @ExtendWith(SpringExtension.class)
@@ -28,7 +24,6 @@ import java.util.Optional;
         "aws.profile-name=${PN_AWS_PROFILE_NAME:default}",
         "aws.endpoint-url=http://localhost:4566",
         "pn.delivery.notification-dao.table-name=Notifications",
-        "pn.delivery.notification-cost-dao.table-name=NotificationsCost",
         "pn.delivery.notification-metadata-dao.table-name=NotificationsMetadata"
     })
 @SpringBootTest
@@ -36,9 +31,6 @@ class NotificationEntityDaoDynamoTestIT {
 
     @Autowired
     private NotificationEntityDao notificationEntityDao;
-
-    @Autowired
-    private NotificationCostEntityDao notificationCostEntityDao;
 
     @Test
     void putSuccess() throws IdConflictException {
@@ -53,17 +45,9 @@ class NotificationEntityDaoDynamoTestIT {
         Key controlKey = Key.builder()
                 .partitionValue( controlIun )
                 .build();
-        Key costKey1 = Key.builder()
-                .partitionValue( "creditorTaxId##noticeCode" )
-                .build();
-        Key costKey2 = Key.builder()
-                .partitionValue( "77777777777##002720356512737953" )
-                .build();
 
         removeItemFromDb( key );
         removeItemFromDb( controlKey );
-        removeFromNotificationCostDb( costKey1 );
-        removeFromNotificationCostDb( costKey2 );
 
         //When
         notificationEntityDao.putIfAbsent( notificationToInsert );
@@ -77,14 +61,6 @@ class NotificationEntityDaoDynamoTestIT {
         Assertions.assertEquals( notificationToInsert, elementFromDb.get() );
         Assertions.assertEquals( controlIun, controlElementFromDb.get().getIun() );
 
-    }
-
-    @Test
-    void getNotificationByPayment() {
-        Optional<NotificationCost> result = notificationCostEntityDao.getNotificationByPaymentInfo( "creditorTaxId", "noticeCode" );
-
-        Assertions.assertNotNull( result );
-        Assertions.assertEquals( "IUN_01" , result.get().getIun() );
     }
 
     @NotNull
@@ -105,11 +81,9 @@ class NotificationEntityDaoDynamoTestIT {
                 .cancelledIun("IUN_00")
                 .senderPaId( "pa_02" )
                 .group( "Group_1" )
-                .sentAt( Instant.now() )
-                .notificationFeePolicy( NewNotificationRequest.NotificationFeePolicyEnum.FLAT_RATE )
-                .recipients( List.of(NotificationRecipientEntity.builder()
+                .recipients( Collections.singletonList(NotificationRecipientEntity.builder()
                                 .recipientType( RecipientTypeEntity.PF )
-                                .recipientId( "recipientTaxId" )
+                                .taxId( "recipientTaxId" )
                                 .digitalDomicile(NotificationDigitalAddressEntity.builder()
                                         .address( "address@pec.it" )
                                         .type( DigitalAddressTypeEntity.PEC )
@@ -129,25 +103,12 @@ class NotificationEntityDaoDynamoTestIT {
                                                         .build() )
                                                 .build() )
                                         .build() )
-                        .build(),
-                        NotificationRecipientEntity.builder()
-                                .payment( NotificationPaymentInfoEntity.builder()
-                                        .creditorTaxId( "77777777777" )
-                                        .noticeCode( "002720356512737953" )
-                                        .build() )
-                                .physicalAddress( NotificationPhysicalAddressEntity.builder()
-                                        .foreignState( "Svizzera" )
-                                        .build() )
-                                .build()) )
+                        .build()) )
                 //.recipientsJson(Collections.emptyMap())
                 .build();
     }
 
     private void removeItemFromDb(Key key) {
         notificationEntityDao.delete( key );
-    }
-
-    private void removeFromNotificationCostDb( Key key ){
-        notificationCostEntityDao.delete( key );
     }
 }
